brain/sources/prod-metadata/objects/Interview_Type__c/Interview_Type__c.object-meta.xml
<CustomObject>
    <label>Interview Type</label>
    <nameField>
        <label>Interview Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>