brain/sources/prod-metadata/objects/Interview_Type__c/fields/Program_Version__c.field-meta.xml
<CustomField>
    <fullName>Program_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>One program version owns many interview types. Blank = global type (hiring interviews).</description>
    <label>Program Version</label>
    <referenceTo>Program_Version__c</referenceTo>
    <relationshipLabel>Interview Types</relationshipLabel>
    <relationshipName>Interview_Types</relationshipName>
    <type>Lookup</type>
</CustomField>