brain/sources/prod-metadata/objects/Interview_Type__c/fields/Requires_Hired_Niche__c.field-meta.xml
<CustomField>
    <fullName>Requires_Hired_Niche__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conduct summary shows the Hired Niche picker for this type (config-not-code, replaces the Intake-by-name hardcode).</description>
    <label>Requires Hired Niche</label>
    <type>Checkbox</type>
</CustomField>