brain/sources/prod-metadata/objects/Interview_Type__c/fields/Uses_Retake_Decision__c.field-meta.xml
<CustomField>
    <fullName>Uses_Retake_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decision set Pass/Retake/Fail instead of Pass/Fail/Needs Improvement.</description>
    <label>Uses Retake Decision</label>
    <type>Checkbox</type>
</CustomField>